Bug 170277 - Crash in setting different page orientation on master pages in Draw
Summary: Crash in setting different page orientation on master pages in Draw
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Mohit Marathe
URL:
Whiteboard: target:26.8.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2026-01-09 10:53 UTC by Regina Henschel
Modified: 2026-01-14 05:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
File to reproduce the crash (8.90 KB, application/vnd.oasis.opendocument.graphics)
2026-01-09 10:53 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2026-01-09 10:53:02 UTC
Created attachment 204983 [details]
File to reproduce the crash

This is a followup report for the new feature implemented in bug 49787.

Open the attached document.
Switch to Master View.
Select second slide in page pane. It is named "Hoch".
Open menu Page -> Page properties.
Go to tab Page
unselect checkbox "Resize all pages"
In radiobutton group "Orientation" click on "Portrait".

=> Crash

The error message is 
Exception thrown: read access violation.
**this** was nullptr.

The last lines of call stack are
	svxcorelo.dll!sdr::MasterPageDescriptor::GetUsedPage() Line 59	C++
 	svxcorelo.dll!SdrPage::TRG_GetMasterPage() Line 1682	C++
 	sdlo.dll!SdDrawDocument::ResizeCurrentPage(SdPage * pPage, const Size & rNewSize, PageKind ePageKind, SdUndoGroup * pUndoGroup, __int64 nLeft, __int64 nRight, __int64 nUpper, __int64 nLower, bool bScaleAll, Orientation eOrientation, unsigned short nPaperBin, bool bBackgroundFullSize) Line 468	C++
 	sdlo.dll!sd::ViewShell::SetPageSizeAndBorder(PageKind ePageKind, const Size & rNewSize, __int64 nLeft, __int64 nRight, __int64 nUpper, __int64 nLower, bool bScaleAll, Orientation eOrientation, unsigned short nPaperBin, bool bBackgroundFullSize) Line 559	C++
 	sdlo.dll!sd::FuPage::ApplyItemSet(const SfxItemSet * pArgs) Line 598	C++
 	sdlo.dll!sd::FuPage::ApplyItemSet(SdStyleSheet & styleSheet, const std::shared_ptr<SfxItemSet> & newAttr, SfxItemSet & tempSet, const std::shared_ptr<SfxItemSet> & mergedAttr) Line 487	C++
 	sdlo.dll!sd::FuPage::ExecuteAsyncDialog::__l38::<lambda_1>::operator()(long nResult) Line 363	C++
 	sdlo.dll!std::invoke<`sd::FuPage::ExecuteAsyncDialog'::`38'::<lambda_1> &,long>(sd::FuPage::ExecuteAsyncDialog::__l38::<lambda_1> & _Obj, long && _Arg1) Line 1680	C++
 	sdlo.dll!std::_Func_impl_no_alloc<`sd::FuPage::ExecuteAsyncDialog'::`38'::<lambda_1>,void,long>::_Do_call(long && <_Args_0>) Line 880	C++
Comment 1 V Stuart Foote 2026-01-09 15:03:54 UTC
need a 26.8.0 nightly built after 2026-01-08
Comment 2 Commit Notification 2026-01-13 18:53:25 UTC
Mohit Marathe committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a1f3108cae0b5d592bd1c2d6aee78ac4f70e595f

tdf#170277 sd: allow setting different page size of a master page directly

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.