tdf#170277 sd: allow setting different page size of a master page directly

Earlier it was only possible to do this via resizing a normal page.

Signed-off-by: Mohit Marathe <mohit.marathe@collabora.com>
Change-Id: I93a3b8a57258c5fdbc234d613b6e5d1f3425af7b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196952
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit a1f3108cae0b5d592bd1c2d6aee78ac4f70e595f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197237
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>